--- a/amed-solver-main/example.ipynb
+++ b/amed-solver-main/example.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T17:39:37.218965Z",
+     "start_time": "2024-12-09T17:39:36.326376Z"
+    }
+   },
    "source": [
     "import os\n",
     "import dnnlib\n",
@@ -12,13 +15,18 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from solver_utils import get_schedule"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T17:39:39.538445Z",
+     "start_time": "2024-12-09T17:39:39.526631Z"
+    }
+   },
    "source": [
     "# Utils for reading the AMED predictor\n",
     "def read_amed_predictor(AMED_predictor, num_steps, sigma_min=0.0292, sigma_max=14.6146, device=None, schedule_type='polynomial', schedule_rho=7, net=None):\n",
@@ -145,31 +153,18 @@
     "        end_y = torch.gather(y_positions_expanded, dim=2, index=(start_idx2 + 1).unsqueeze(2)).squeeze(2)\n",
     "        cand = start_y + (x - start_x) * (end_y - start_y) / (end_x - start_x)\n",
     "        return cand"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading AMED predictor from \"./exp/00027-ms_coco-6-20-dpmpp-dpmpp-2-discrete/network-snapshot-000005.pt\"...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T17:39:53.440183Z",
+     "start_time": "2024-12-09T17:39:53.428154Z"
     }
-   ],
+   },
    "source": [
     "# Construct AMED predictor\n",
     "\n",
@@ -209,32 +204,36 @@
     "                        max_order=amed_dict.max_order, predict_x0=amed_dict.predict_x0, lower_order_final=amed_dict.lower_order_final)\n",
     "AMED_predictor = dnnlib.util.construct_class_by_name(**AMED_kwargs) # subclass of torch.nn.Module\n",
     "AMED_predictor.load_state_dict(amed_dict.state_dict())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original   : [999, 899, 799, 699, 599, 500, 400, 300, 200, 100, 0]\n",
-      "AMED       : [999, 885, 799, 705, 599, 492, 400, 329, 200, 73, 0]\n",
-      "Grad scale : [1.0, 0.9974, 1.0, 0.9904, 1.0, 0.991, 1.0, 0.9905, 1.0, 0.9904, 1.0]\n",
-      "Time scale : [1.0, 0.9872, 1.0, 1.0152, 1.0, 1.0186, 1.0, 0.9934, 1.0, 0.9731, 1.0]\n"
+      "Loading AMED predictor from \"./exp/00027-ms_coco-6-20-dpmpp-dpmpp-2-discrete/network-snapshot-000005.pt\"...\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/6_/ps_h4zmj3rs2s2rqr1whb3zh0000gn/T/ipykernel_46814/1004945328.py:80: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  t = torch.tensor(t)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T17:39:59.559292Z",
+     "start_time": "2024-12-09T17:39:59.537654Z"
+    }
+   },
    "source": [
     "# Read AMED predictor\n",
     "if AMED_predictor.dataset_name == 'ms_coco':\n",
@@ -261,7 +260,28 @@
     "print('AMED       :', t_steps)\n",
     "print('Grad scale :', scale_dirs)\n",
     "print('Time scale :', scale_times)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original   : [999, 899, 799, 699, 599, 500, 400, 300, 200, 100, 0]\n",
+      "AMED       : [999, 885, 799, 705, 599, 492, 400, 329, 200, 73, 0]\n",
+      "Grad scale : [1.0, 0.9974, 1.0, 0.9904, 1.0, 0.991, 1.0, 0.9905, 1.0, 0.9904, 1.0]\n",
+      "Time scale : [1.0, 0.9872, 1.0, 1.0152, 1.0, 1.0186, 1.0, 0.9934, 1.0, 0.9731, 1.0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_120363/395306596.py:80: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  t = torch.tensor(t)\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
