--- a/amed-solver-main/learn_hook.ipynb
+++ b/amed-solver-main/learn_hook.ipynb
@@ -55,6 +55,64 @@
     }
    ],
    "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T20:03:26.362592Z",
+     "start_time": "2024-12-09T20:03:26.359258Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import dnnlib\n",
+    "from torch_utils.download_util import check_file_by_key\n",
+    "import pickle\n",
+    "import torch"
+   ],
+   "id": "a0c6d3a0e9a5b8de",
+   "outputs": [],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T20:16:17.010161Z",
+     "start_time": "2024-12-09T20:16:16.862749Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "model_path, classifier_path = check_file_by_key('cifar10')\n",
+    "with dnnlib.util.open_url(model_path) as f:\n",
+    "    net = pickle.load(f)['ema'].to(torch.device('cuda'))\n",
+    "net.sigma_min = 0.002\n",
+    "net.sigma_max = 80.0"
+   ],
+   "id": "1d277526a2844aa6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model already exists: ../amed-solver-main/src/cifar10/edm-cifar10-32x32-uncond-vp.pkl\n"
+     ]
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T20:21:25.050726Z",
+     "start_time": "2024-12-09T20:21:25.044430Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "del net",
+   "id": "c2e5159575f0968d",
+   "outputs": [],
+   "execution_count": 16
   }
  ],
  "metadata": {
