--- a/amed-solver-main/example.ipynb
+++ b/amed-solver-main/example.ipynb
@@ -168,12 +168,12 @@
    "source": [
     "# Construct AMED predictor\n",
     "\n",
-    "if not os.path.exists(\"./exp/00027-ms_coco-6-20-dpmpp-dpmpp-2-discrete\"):\n",
-    "    raise ValueError(\"Download the AMED predictor (00027-ms_coco-6-20-dpmpp-dpmpp-2-discrete) and unzip to './exp'. \\\n",
+    "if not os.path.exists(\"exps/00027-ms_coco-6-20-dpmpp-dpmpp-2-discrete\"):\n",
+    "    raise ValueError(\"Download the AMED predictor (00027-ms_coco-6-20-dpmpp-dpmpp-2-discrete) and unzip to './exps'. \\\n",
     "                     from 'https://drive.google.com/drive/folders/1KlS0mV3qKMBu1qghy9sXRrjL2Aic4_fN'\")\n",
     "predictor_path = '27'\n",
     "device = torch.device('cpu')\n",
-    "exp_path = './exp'\n",
+    "exp_path = 'exps'\n",
     "\n",
     "# Load AMED predictor\n",
     "if not predictor_path.endswith('pt'):      # load by experiment number\n",
