--- a/amed-solver-main/learn_hook.ipynb
+++ b/amed-solver-main/learn_hook.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-03T17:49:47.302827Z",
-     "start_time": "2024-12-03T17:49:46.297925Z"
+     "end_time": "2024-12-10T15:24:57.913296Z",
+     "start_time": "2024-12-10T15:24:57.908307Z"
     }
    },
    "source": [
@@ -48,19 +48,19 @@
      "output_type": "stream",
      "text": [
       "Inside Linear\n",
-      "Input: (tensor([[-0.3839,  0.8192,  1.0267,  0.6188,  1.7066,  0.4749, -0.7978,  0.8370,\n",
-      "         -1.1498,  1.0701]]),)\n",
-      "Output: tensor([[0.0740]], grad_fn=<AddmmBackward0>)\n"
+      "Input: (tensor([[ 0.4914, -0.4579,  0.1160,  0.8799,  1.3486,  0.5487,  0.1196,  0.1384,\n",
+      "         -1.3128,  0.4260]]),)\n",
+      "Output: tensor([[-0.0956]], grad_fn=<AddmmBackward0>)\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T20:03:26.362592Z",
-     "start_time": "2024-12-09T20:03:26.359258Z"
+     "end_time": "2024-12-10T15:25:09.859332Z",
+     "start_time": "2024-12-10T15:25:09.857357Z"
     }
    },
    "cell_type": "code",
@@ -68,7 +68,8 @@
     "import dnnlib\n",
     "from torch_utils.download_util import check_file_by_key\n",
     "import pickle\n",
-    "import torch"
+    "import torch\n",
+    "import os"
    ],
    "id": "a0c6d3a0e9a5b8de",
    "outputs": [],
@@ -77,8 +78,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T20:16:17.010161Z",
-     "start_time": "2024-12-09T20:16:16.862749Z"
+     "end_time": "2024-12-10T14:09:55.252715Z",
+     "start_time": "2024-12-10T14:09:54.829406Z"
     }
    },
    "cell_type": "code",
@@ -99,20 +100,431 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T20:21:25.050726Z",
-     "start_time": "2024-12-09T20:21:25.044430Z"
+     "end_time": "2024-12-10T14:09:58.378759Z",
+     "start_time": "2024-12-10T14:09:58.374565Z"
     }
    },
    "cell_type": "code",
-   "source": "del net",
+   "source": "net",
    "id": "c2e5159575f0968d",
-   "outputs": [],
-   "execution_count": 16
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EDMPrecond(\n",
+       "  (model): SongUNet(\n",
+       "    (map_noise): PositionalEmbedding()\n",
+       "    (map_augment): Linear()\n",
+       "    (map_layer0): Linear()\n",
+       "    (map_layer1): Linear()\n",
+       "    (enc): ModuleDict(\n",
+       "      (32x32_conv): Conv2d()\n",
+       "      (32x32_block0): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (32x32_block1): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "      )\n",
+       "      (32x32_block2): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "      )\n",
+       "      (32x32_block3): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "      )\n",
+       "      (16x16_down): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (16x16_block0): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (norm2): GroupNorm()\n",
+       "        (qkv): Conv2d()\n",
+       "        (proj): Conv2d()\n",
+       "      )\n",
+       "      (16x16_block1): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (norm2): GroupNorm()\n",
+       "        (qkv): Conv2d()\n",
+       "        (proj): Conv2d()\n",
+       "      )\n",
+       "      (16x16_block2): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (norm2): GroupNorm()\n",
+       "        (qkv): Conv2d()\n",
+       "        (proj): Conv2d()\n",
+       "      )\n",
+       "      (16x16_block3): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (norm2): GroupNorm()\n",
+       "        (qkv): Conv2d()\n",
+       "        (proj): Conv2d()\n",
+       "      )\n",
+       "      (8x8_down): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (8x8_block0): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "      )\n",
+       "      (8x8_block1): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "      )\n",
+       "      (8x8_block2): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "      )\n",
+       "      (8x8_block3): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "      )\n",
+       "    )\n",
+       "    (dec): ModuleDict(\n",
+       "      (8x8_in0): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (norm2): GroupNorm()\n",
+       "        (qkv): Conv2d()\n",
+       "        (proj): Conv2d()\n",
+       "      )\n",
+       "      (8x8_in1): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "      )\n",
+       "      (8x8_block0): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (8x8_block1): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (8x8_block2): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (8x8_block3): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (8x8_block4): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (16x16_up): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (16x16_block0): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (16x16_block1): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (16x16_block2): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (16x16_block3): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (16x16_block4): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "        (norm2): GroupNorm()\n",
+       "        (qkv): Conv2d()\n",
+       "        (proj): Conv2d()\n",
+       "      )\n",
+       "      (32x32_up): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (32x32_block0): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (32x32_block1): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (32x32_block2): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (32x32_block3): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (32x32_block4): UNetBlock(\n",
+       "        (norm0): GroupNorm()\n",
+       "        (conv0): Conv2d()\n",
+       "        (affine): Linear()\n",
+       "        (norm1): GroupNorm()\n",
+       "        (conv1): Conv2d()\n",
+       "        (skip): Conv2d()\n",
+       "      )\n",
+       "      (32x32_aux_norm): GroupNorm()\n",
+       "      (32x32_aux_conv): Conv2d()\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T15:25:56.521496Z",
+     "start_time": "2024-12-10T15:25:56.506560Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "predictor_path = '00001'\n",
+    "if not predictor_path.endswith('pkl'):      # load by experiment number\n",
+    "    # find the directory with trained AMED predictor\n",
+    "    predictor_path_str = '0' * (5 - len(predictor_path)) + predictor_path\n",
+    "    for file_name in os.listdir(\"exps\"):\n",
+    "        if file_name.split('-')[0] == predictor_path_str:\n",
+    "            file_list = [f for f in os.listdir(os.path.join('exps', file_name)) if f.endswith(\"pkl\")]\n",
+    "            max_index = -1\n",
+    "            max_file = None\n",
+    "            for ckpt_name in file_list:\n",
+    "                file_index = int(ckpt_name.split(\"-\")[-1].split(\".\")[0])\n",
+    "                if file_index > max_index:\n",
+    "                    max_index = file_index\n",
+    "                    max_file = ckpt_name\n",
+    "            predictor_path = os.path.join('exps', file_name, max_file)\n",
+    "            break\n",
+    "print(f'Loading AMED predictor from \"{predictor_path}\"...')\n",
+    "with dnnlib.util.open_url(predictor_path, verbose=True) as f:\n",
+    "    AMED_predictor = pickle.load(f)['model']"
+   ],
+   "id": "3e256c621238c3fc",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading AMED predictor from \"./exp/00001-cifar10-4-5-amed-heun-1-uni1.0-afs/network-snapshot-000010.pkl\"...\n"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T19:23:24.712310Z",
+     "start_time": "2024-12-10T19:23:24.710141Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "AMED_predictor.scale_dir\n",
+   "id": "2a07b257c8ccba03",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.01"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T15:34:02.524273Z",
+     "start_time": "2024-12-10T15:34:02.458146Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from torchinfo import summary\n",
+    "# print(AMED_predictor)\n",
+    "summary(AMED_predictor, input_size=[(8, 8, 8), (1,1,1,1), (1,1,1,1)])"
+   ],
+   "id": "db4f54827ecd05ff",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "==========================================================================================\n",
+       "Layer (type:depth-idx)                   Output Shape              Param #\n",
+       "==========================================================================================\n",
+       "AMED_predictor                           [8, 1]                    --\n",
+       "├─PositionalEmbedding: 1-1               [1, 8]                    --\n",
+       "├─Linear: 1-2                            [1, 8]                    (72)\n",
+       "├─PositionalEmbedding: 1-3               [1, 8]                    --\n",
+       "├─Linear: 1-4                            [1, 8]                    (recursive)\n",
+       "├─Linear: 1-5                            [8, 128]                  (8,320)\n",
+       "├─Linear: 1-6                            [8, 4]                    (516)\n",
+       "├─Linear: 1-7                            [8, 1]                    (21)\n",
+       "├─Sigmoid: 1-8                           [8, 1]                    --\n",
+       "├─Linear: 1-9                            [8, 1]                    (21)\n",
+       "├─Sigmoid: 1-10                          [8, 1]                    --\n",
+       "==========================================================================================\n",
+       "Total params: 8,950\n",
+       "Trainable params: 0\n",
+       "Non-trainable params: 8,950\n",
+       "Total mult-adds (M): 0.07\n",
+       "==========================================================================================\n",
+       "Input size (MB): 0.00\n",
+       "Forward/backward pass size (MB): 0.01\n",
+       "Params size (MB): 0.04\n",
+       "Estimated Total Size (MB): 0.05\n",
+       "=========================================================================================="
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 21
   }
  ],
  "metadata": {
